# yashovardhan99.github.io

./: .gitignore  404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zola.toml
.github/workflows/: publish.yml
blog/: index.html
blog/2025/08/14/introducing-bulkinvoicer/: index.html
blog/archive/2025/: index.html
blog/assets/introducing-bulkinvoicer/: sample.config.toml
blog/category/general/: index.html
blog/category/project-update/: index.html
content/: now.md  projects.md
content/blog/: _index.md  how-i-use-ai.md  introducing-bulkinvoicer.md  introducting-niveshpy.md
docs/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: hello-world.md  how-i-use-ai.md  introducing-bulkinvoicer.md  introducting-niveshpy.md
overrides/: 404.html
overrides/partials/: comments.html
search/: search_index.json
static/: copy-code.js  site.css
static/blog/introducing-bulkinvoicer/: sample.config.toml
templates/: 404.html  base.html  blog-macros.html  blog-page.html  blog.html  content.html  index.html
templates/shortcodes/: cards.html  image.html  load_data.html  project.html  resize_image.html  svg.html
