[project]
name = "yashovardhan99.github.io"
description = "My Personal Home Page"
dependencies = ["mkdocs-material >= 9.0.0", "mkdocs-rss-plugin"]
requires-python = ">=3.13"
authors = [
    { name = "Yashovardhan Dhanania", email = "yashovardhandhanania@gmail.com" },
]
maintainers = [
    { name = "Yashovardhan Dhanania", email = "yashovardhandhanania@gmail.com" },
]
version = "1.0.0"
